--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon e -js ./src/server.js"
+    "dev": "nodemon -r dotenv/config -e js ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -20,15 +20,22 @@
   },
   "homepage": "https://github.com/Champtont/DeMiATi_BE#readme",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-list-endpoints": "^6.0.0",
     "express-validator": "^6.14.2",
-    "fs-extra": "^11.1.0",
     "http-errors": "^2.0.0",
+    "mongoose": "^6.8.4",
+    "mongoose-type-phone": "^1.0.1",
     "multer": "^1.4.5-lts.1",
-    "uniqid": "^5.4.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "query-to-mongo": "^0.10.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
 }
